@@ -3,6 +3,7 @@ Changes for 3.4.7rc1
 New features:
 
 Bug fixes:
+........S. [ZBX-13236] fixed error message of function parameters parse (MVekslers)
 ........S. [ZBX-13194] fixed incorrect processing of zabbix[wcache,value,*] internal check (Sergejs)
 .......PS. [ZBX-13060] added limitation for meaningless server reconnection attempts to incorrectly configured passive proxy (viktors)
 ...G...... [ZBX-13117] fixed vfs.dir.size with symbol links on Windows (MVekslers)
